--- a/HW_03/pom.xml
+++ b/HW_03/pom.xml
@@ -9,30 +9,25 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>HW_02_2</artifactId>
+    <artifactId>HW_03</artifactId>
+
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <archive>
-                        <index>true</index>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>ru.SizeUtilTester</mainClass>
-                        </manifest>
-                        <manifestEntries>
-                            <Premain-Class>ru.SizeUtil</Premain-Class>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>make-assembly</id>
@@ -42,6 +37,17 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>ru.AnotherArrayList</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -53,6 +59,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
