Homework 5. Stats per minute garbage collection

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>HW_02_2</module>
         <module>HW_03</module>
         <module>HW_04</module>
+        <module>HW_05</module>
     </modules>
 
 
