HW 07, add ATM emulator

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>HW_04</module>
         <module>HW_05</module>
         <module>HW_06</module>
+        <module>HW_07</module>
     </modules>
 
 
