--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>HW_05</module>
         <module>HW_06</module>
         <module>HW_07</module>
+        <module>HW_08</module>
     </modules>
 
 
