HW_09. add examples from lesson

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>HW_06</module>
         <module>HW_07</module>
         <module>HW_08</module>
+        <module>HW_09</module>
     </modules>
 
 
