--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>HW_07</module>
         <module>HW_08</module>
         <module>HW_09</module>
+        <module>HW_10</module>
     </modules>
 
 
